--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <h1>Martina Mustermann</h1>
     <p>Ich bin in der 8. Klasse und wohne in Berlin.</p>
+    <p> Du kannst diese Seite unter folgendem Link betrachten <p>
+    <link href="https://starcodemuenchen.github.io/webDevWG02/"> 
 </body>
 
 </html>
