--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Martina Mustermann</h1>
     <p>Ich bin in der 8. Klasse und wohne in Berlin.</p>
     <p> Du kannst diese Seite unter folgendem Link betrachten <p>
-    <link href="https://starcodemuenchen.github.io/webDevWG02/"> 
+    <a href="https://starcodemuenchen.github.io/webDevWG02/"> https://starcodemuenchen.github.io/webDevWG02/ </a>
 </body>
 
 </html>
