--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 <body>
     <h1>Martina Mustermann</h1>
     <p>Ich bin in der 8. Klasse und wohne in Berlin.</p>
-    <p> Du kannst diese Seite unter folgendem Link betrachten <p>
+    <p> Du kannst diese Seite unter folgendem Link betrachten nachdem die Datei gepushed wurde.<p>
     <a href="https://starcodemuenchen.github.io/webDevWG02/"> https://starcodemuenchen.github.io/webDevWG02/ </a>
+    
+   <p> Du kannst diese Seite unter folgendem Link betrachten, wenn du mit Steuerung C oder "Commit changes..." gespeichert hast.<p>
+   <a href="https://htmlpreview.github.io">
+   <p> Füge dann den Link: <p>
 </body>
 
 </html>
