--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <a href="https://starcodemuenchen.github.io/webDevWG02/"> https://starcodemuenchen.github.io/webDevWG02/ </a>
     
    <p> Du kannst diese Seite unter folgendem Link betrachten, wenn du mit Steuerung C oder "Commit changes..." gespeichert hast.<p>
-   <a href="https://htmlpreview.github.io">
-   <p> Füge dann den Link: <p>
+    <a href="https://htmlpreview.github.io"> https://htmlpreview.github.io </a>
+   <p> Füge dann den Link: https://starcodemuenchen.github.io/webDevWG02/ ein.<p>
 </body>
 
 </html>
