--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Martina Mustermann</h1>
     <p>Ich bin in der 8. Klasse und wohne in Berlin.</p>
-    <p> Du kannst diese Seite unter folgendem Link betrachten nachdem die Datei gepushed wurde.<p>
+    <p> Du kannst diese Seite unter folgendem Link betrachten nachdem die Datei gespeichert wurde. Achte Darauf, dass du GitHub nochmal im Browser aktualisierst<p>
     <a href="https://starcodemuenchen.github.io/webDevWG02/"> https://starcodemuenchen.github.io/webDevWG02/ </a>
     
    <p> Du kannst diese Seite unter folgendem Link betrachten, wenn du mit Steuerung C oder "Commit changes..." gespeichert hast.<p>
