--- a/index.html
+++ b/index.html
@@ -1,101 +1,112 @@
 <!DOCTYPE html>
 <html lang="de">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Surf & Co App</title>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- CSS Stylesheets -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="styles.css" />
+  <title>Surf & Co App</title>
 
-    <!-- Font Awesome -->
-    <script
-      defer
-      src="https://use.fontawesome.com/releases/v6.4.0/js/all.js"
-    ></script>
-  </head>
+  <!-- CSS Stylesheets -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+  <link rel="stylesheet" href="styles.css" />
 
-  <body>
-    <!-- ======================================= -->
-    <!-- ===== Section 1: Navigationszeile ===== -->
-    <!-- ======================================= -->
-    <!-- Die Navigationszeile ist dafür da, dass man schnell zu bestimmten Sections auf unserer Website navigieren kann-->
-    <section class="section-style-1" id="navbar">
-      <div class="container-fluid">
-        <!-- Dein Code -->
-      </div>
-    </section>
+  <!-- Font Awesome -->
+  <script defer src="https://use.fontawesome.com/releases/v6.4.0/js/all.js"></script>
+</head>
 
-    <!-- ================================ -->
-    <!-- ===== Section 2: Überblick ===== -->
-    <!-- ================================ -->
-    <!-- Hier wird der Nutzer auf unsere App aufmerksam gemacht -->
-    <section class="section-style-2" id="überblick">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-6 überblick-links"></div>
+<body>
+  <!-- ======================================= -->
+  <!-- ===== Section 1: Navigationszeile ===== -->
+  <!-- ======================================= -->
+  <!-- Die Navigationszeile ist dafür da, dass man schnell zu bestimmten Sections auf unserer Website navigieren kann-->
+  <section class="section-style-1" id="navbar">
+    <div class="container-fluid">
+      <!-- Dein Code -->
+    </div>
+  </section>
+
+  <!-- ================================ -->
+  <!-- ===== Section 2: Überblick ===== -->
+  <!-- ================================ -->
+  <!-- Hier wird der Nutzer auf unsere App aufmerksam gemacht -->
+  <section class="section-style-2" id="überblick">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-6 überblick-links">
           <h1 class="grosser-titel">Surf & Co App</h1>
           <h3 class="kleiner-titel">
-           This App is full of resources, for surfers and other ocean athlets,
+            This App is full of resources, for surfers and other ocean athlets,
             such as access to high end gear brands, surf/weather trackers and other useful features.
           </h3>
-          <button type="button" class="btn btn-outline-primary">
+          <button onclick="window.location.href='first link.html';" class="btn btn-outline-primary">
             Check it out!
           </button>
-          <div class="col-lg-6 überblick-rechts"></div>
+        </div>
+        <div class="col-lg-6 überblick-rechts">
+          <img class="pic-for-app" src="sunset pictures for app.jpg" />
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- =============================== -->
-    <!-- ===== Section 3: Features ===== -->
-    <!-- =============================== -->
-    <!-- Hier werden die Features unserer App aufgelistet -->
-    <section class="section-style-1" id="features">
-      <div class="container-fluid text-center">
-        <!-- Dein Code -->
+  <!-- =============================== -->
+  <!-- ===== Section 3: Features ===== -->
+  <!-- =============================== -->
+  <!-- Hier werden die Features unserer App aufgelistet -->
+  <section class="section-style-1" id="features">
+    <div class="container-fluid text-center">
+      <!-- Wir wollen, dass die Features nebeneinander angezeigt werden. Dafür verwenden wir wieder die Bootstrap-Klasse "row" -->
+      <div class="row">
+        <div class="feature-box col-lg-4">
+          <!-- Hier spezifizieren wir die Überschriften und die Beschreibungen der Features -->
+          <h3 class="kleiner-titel">Gear</h3>
+          <p>
+            next time im adding icons 
+          </p>
+        </div>
+
+        <div class="feature-box col-lg-4">
+          <h3 class="kleiner-titel">Weather</h3>
+        </div>
+
+        <div class="feature-box col-lg-4">
+          <h3 class="kleiner-titel">Easy Access</h3>
+        </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- ========================================= -->
-    <!-- ===== Section 4: Nutzer-Bewertungen ===== -->
-    <!-- ========================================= -->
-    <!-- Hier werden die Nutzer-Bewertungen angezeigt -->
-    <section class="section-style-2" id="bewertungen">
+  <!-- ========================================= -->
+  <!-- ===== Section 4: Nutzer-Bewertungen ===== -->
+  <!-- ========================================= -->
+  <!-- Hier werden die Nutzer-Bewertungen angezeigt -->
+  <section class="section-style-2" id="bewertungen">
+    <!-- Dein Code -->
+  </section>
+
+  <!-- ============================= -->
+  <!-- ===== Section 5: Preise ===== -->
+  <!-- ============================= -->
+  <!-- Hier werden die verschiedenen Preispläne unserer App aufgelistet -->
+  <section class="section-style-1" id="preise">
+    <!-- Dein Code -->
+  </section>
+
+  <!-- ============================= -->
+  <!-- ===== Section 6: Footer ===== -->
+  <!-- ============================= -->
+  <!-- Hier werden die Social-Media-Icons und der Copyright-Text angezeigt -->
+  <section class="section-style-2" id="footer">
+    <div class="container-fluid text-center">
       <!-- Dein Code -->
-    </section>
+    </div>
+  </section>
+  <!-- Bootstrap JS Script -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+</body>
 
-    <!-- ============================= -->
-    <!-- ===== Section 5: Preise ===== -->
-    <!-- ============================= -->
-    <!-- Hier werden die verschiedenen Preispläne unserer App aufgelistet -->
-    <section class="section-style-1" id="preise">
-      <!-- Dein Code -->
-    </section>
-
-    <!-- ============================= -->
-    <!-- ===== Section 6: Footer ===== -->
-    <!-- ============================= -->
-    <!-- Hier werden die Social-Media-Icons und der Copyright-Text angezeigt -->
-    <section class="section-style-2" id="footer">
-      <div class="container-fluid text-center">
-        <!-- Dein Code -->
-      </div>
-    </section>
-    <!-- Bootstrap JS Script -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
-  </body>
 </html>
-
-   
